Implementación de la vista de login, y la lista de contactos

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context="com.shellcore.android.firebasechat.LoginActivity">
+    tools:context="com.shellcore.android.firebasechat.login.ui.LoginActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_email"
