--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorToText">#FFF</color>
-    <color name="colorToBackground">#555</color>
+    <color name="colorPrimary">#5BC9E1</color>
+    <color name="colorPrimaryDark">#359fb6</color>
+    <color name="colorAccent">#FF9800</color>
+    <color name="colorToText">#000</color>
+    <color name="colorToText2">#FFF</color>
+    <color name="colorToBackground">#5BC9E1</color>
+    <color name="colorToBackground2">#0083CA</color>
 </resources>
